my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.4/errors/WNOIS/T_WNOIS-struct.h
/* Generated by dmlc, do not edit! */

#ifndef T_WNOIS_STRUCT_H
#define T_WNOIS_STRUCT_H

typedef struct test test_t;

conf_class_t *_initialize_T_WNOIS(void);


#endif /* not T_WNOIS_STRUCT_H */
